--- a/cart.html
+++ b/cart.html
@@ -60,8 +60,8 @@
             <p class="pp text-xl text-gray-600">You have nothing in your shopping cart.</p>
             
             <!-- Button with hover effect -->
-            <button id="but1" class="border border-black hover:bg-black hover:text-white font-bold py-2 px-4 ml-2 mb-5 rounded-full">
-              <p style="font-weight:500;">Continue Shopping</p>
+            <a href="https://ajit-divakaran.github.io/Soilboy/"></a><button id="but1" class="border border-black hover:bg-black hover:text-white font-bold py-2 px-4 ml-2 mb-5 rounded-full">
+              <p style="font-weight:500;">Continue Shopping</p></a>
             </button>
           </div>
     </section>
